tests/errors/runtime.NotEnoughArguments.1.res
hello

══╡ Value Error ╞═════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Not enough parameters
  
  Cannot perform:
      print
  
  Required: 
      1

  ┃ File: tests/errors/runtime.NotEnoughArguments.1.art
  ┃ Line: 3
  ┃ 
  ┃    1 ║  hello: "hello"
  ┃    2 ║  print
  ┃    3 ║► print "hello"
  ┃    4 ║  print 2